# SprintPilot

./: .env.example  .gitignore  README.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/examples/: course-planner-report-excerpt.md  internship-tracker-report-excerpt.md
docs/images/: core-v1-architecture.mmd
specs/001-core-v1-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-taiga-backlog-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/sprintpilot/: __init__.py  cli.py  config.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli_workflow.py  test_taiga_sync_workflow.py
tests/unit/: __init__.py  test_agile_validation.py  test_architect_adapter.py  test_architect_prompts.py  test_architecture_plan_models.py  test_architecture_validation.py  test_architecture_workflow.py  test_artifact_models.py  test_cli_workflow.py  test_confidence_engine.py  test_confidence_inputs.py  test_confidence_recommendations.py  test_confidence_workflow.py  test_config.py  test_core_v1_mocked_pipeline.py  test_gemini_provider.py  test_llm_exceptions.py  test_llm_factory.py  test_llm_models.py  test_llm_provider_contract.py  test_openrouter_provider.py  test_product_definition_models.py  test_product_definition_workflow.py  test_product_manager_adapter.py  test_report_assembly.py  (+17 more)
(+57 files in other folders)
